--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+<link rel="stlesheet" href="style.css"
 p {
     text-align: center;
     font-size: 20px;
@@ -6,5 +7,5 @@ p {
 h1 {
     text-align: center;
     font-size: 30px;
-    
+
 }
