--- a/style.css
+++ b/style.css
@@ -8,3 +8,11 @@ h1 {
     font-size: 34px;
     text-decoration-line: overline underline;
 }
+
+#paragrf01{
+    color: #000000
+}
+
+#paragrf02{
+    color: #000000
+}
