--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 
 .destaque{
     color:rgb(89, 94, 83);
-    background-color: rgb(78, 112, 156, 0.596);
+    background-color: rgba(255, 255, 255, 0);
     font-style: italic;
     text-decoration: dotted;
     font-weight: bold;
