--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1 {
 .destaque{
     color:rgb(89, 94, 83);
     background-color: rgba(255, 255, 255, 0);
-    font-style: italic;
-    text-decoration: dotted;
+    font-style: normal;
+    text-decoration: overline underline;
     font-weight: bold;
 }
