--- a/style.css
+++ b/style.css
@@ -18,9 +18,18 @@ h1 {
 }
 
 .destaque{
-    color:rgb(89, 94, 83);
+    color:rgb(0, 0, 0);
     background-color: rgba(255, 255, 255, 0);
     font-style: normal;
     text-decoration: overline underline;
     font-weight: bold;
+}
+
+img{
+    background-color: crimson;
+    padding: 20px;
+    max-height: 60%;
+    max-width: 60%;
+    margin:auto;
+    display: block;
 }
