--- a/style.css
+++ b/style.css
@@ -42,3 +42,9 @@ h1 {
     margin:auto;
     display: block;
 }
+#texto{
+    background-color: #508D69;
+}
+#listas{
+    background-color: #5F6F52;
+}
