--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ h1 {
     display: block;
 }
 #texto{
-    background-color: #508D69;
+    background-color: #ECF4D6;
 }
 #listas{
-    background-color: #5F6F52;
+    background-color: #FEFAE0;
 }
