--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@ h1 {
 }
 #texto{
     background-color: #ECF4D6;
+    color: whitesmoke
 }
 #listas{
     background-color: #FEFAE0;
+    color:whitesmoke
 }
