--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ h1 {
     background-color: #FEFAE0;
     padding: 3%
 }
+header{
+    padding: 20px;
+    background-color: rgb(12, 129, 231);
+    border-bottom: red 10px solid;
+    color:rgb(0, 0, 0)
+}
