--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
     padding: 3%
 }
 header{
+    font-size: 45px;
     padding: 40px;
     background-color: rgb(146, 174, 199);
     border-bottom: red 10px solid;
