--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ h1 {
     padding: 3%
 }
 header{
+    text-align: center;
     font-size: 45px;
     padding: 40px;
     background-color: rgb(146, 174, 199);
@@ -61,4 +62,5 @@ header{
 #menu{
     font-size: 30px;
     color: beige;
+    text-align: center;
 }
