--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
     max-width: 40%;
     margin:auto;
     display: block;
+    border-radius: 20px;
 }
 #texto{
     background-color: #ECF4D6;
